--- a/src/main/resources/templates/produto/ProdutoEditar.html
+++ b/src/main/resources/templates/produto/ProdutoEditar.html
@@ -11,37 +11,7 @@
     <a href="/produtos">Voltar à Lista de Produtos</a>
 </header>
 
-<h2>Editar Produto</h2>
-<form method="post" th:action="@{/produtos/editar/{id}(id=${produtoDto.id})}">
-    <input type="hidden" th:value="${produtoDto.id}" name="id"/>
-
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" name="nome" th:value="${produtoDto.nome}"
-           required/>
-    <br/><br/>
-
-    <label for="categoriaId">Categoria:</label>
-    <select id="categoriaId" name="categoriaId">
-        <th:block th:each="categoria : ${categorias}">
-            <option th:value="${categoria.id}" th:text="${categoria.nome}"
-                    th:selected="${categoria.id == produtoDto.categoriaId}"></option>
-        </th:block>
-    </select><br/><br/>
-
-    <label for="descricao">Descrição:</label>
-    <textarea id="descricao" name="descricao"
-              th:text="${produtoDto.descricao}"></textarea><br/><br/>
-
-    <label for="preco">Preço:</label>
-    <input type="number" id="preco" name="preco" step="0.01"
-           th:value="${produtoDto.preco}" required/><br/><br/>
-
-    <label for="quantidade">Quantidade:</label>
-    <input type="number" id="quantidade" name="quantidade"
-           th:value="${produtoDto.quantidade}" required/><br/><br/>
-
-    <button type="submit">Salvar Alterações</button>
-</form>
+    <main th:replace="produto/ProdutoFormulario :: form('Editar', '/produtos/editar/' + ${produtoDto.id}, true)"></main>
 
 </body>
 </html>
