--- a/src/main/resources/templates/produto/produtos.html
+++ b/src/main/resources/templates/produto/produtos.html
@@ -12,30 +12,7 @@
 </header>
 
 <!-- Formulário para adicionar novo produto -->
-<h2>Adicionar Novo Produto</h2>
-<form method="post" action="/produtos/adicionar">
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome" name="nome" required/>
-
-    <label for="descricao">Descrição:</label>
-    <input type="text" id="descricao" name="descricao" required/>
-
-    <label for="preco">Preço:</label>
-    <input type="number" id="preco" name="preco" step="0.01" required/>
-
-    <label for="quantidade">Quantidade:</label>
-    <input type="number" id="quantidade" name="quantidade" required/>
-
-    <label for="categoria">Categoria:</label>
-    <select id="categoria" name="categoriaId" required>
-        <th:block th:each="categoria : ${categorias}">
-            <option th:value="${categoria.id}"
-                    th:text="${categoria.nome}"></option>
-        </th:block>
-    </select>
-
-    <button type="submit">Adicionar Produto</button>
-</form>
+    <main th:replace="produto/ProdutoFormulario :: form('Cadastrar', '/produtos/adicionar', false)"></main>
 
 <!-- Botão para gerar o relatório -->
 <h2>Relatório de Produtos</h2>
@@ -44,38 +21,7 @@
 </form>
 
 <h2>Produtos Cadastrados</h2>
-<table>
-    <thead>
-    <tr>
-        <th>Nome</th>
-        <th>Categoria</th>
-        <th>Descrição</th>
-        <th>Preço</th>
-        <th>Quantidade</th>
-        <th>Ações</th>
-    </tr>
-    </thead>
-    <tbody>
-    <th:block th:each="produto : ${produtos}">
-        <tr>
-            <td th:text="${produto.nome}"></td>
-            <td th:text="${produto.categoria.nome}"></td>
-            <td th:text="${produto.descricao}"></td>
-            <td th:text="${produto.preco}"></td>
-            <td th:text="${produto.quantidade}"></td>
-            <td>
-                <!-- Editar: Redireciona para a página de edição -->
-                <a th:href="@{/produtos/editar/{id}(id=${produto.id})}">Editar</a>
+    <table th:replace="produto/ProdutoTabela"></table>
 
-                <!-- Excluir: Link simples para excluir produto -->
-                <form th:action="@{/produtos/excluir/{id}(id=${produto.id})}"
-                      method="post" style="display:inline;">
-                    <button type="submit">Excluir</button>
-                </form>
-            </td>
-        </tr>
-    </th:block>
-    </tbody>
-</table>
 </body>
 </html>
